apps/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vpn-torrent
  namespace: media
  labels:
    app: vpn-torrent
spec:
  type: ClusterIP
  selector:
    app: vpn-torrent
  ports:
  - name: qbittorrent-ui
    port: 8080
    targetPort: 8080
  - name: torrent-tcp
    port: 6881
    targetPort: 6881
    protocol: TCP
  - name: torrent-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
