apps/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/upstream-vhost: qbittorrent.home.arpa
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host $host;
      proxy_set_header X-Forwarded-Host $host;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Forwarded-Proto $scheme;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - qbittorrent.home.arpa
    secretName: homelab-wildcard-tls
  rules:
  - host: qbittorrent.home.arpa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vpn-torrent
            port:
              number: 8080
